# AirTrace

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE.md  README.md  sources_menu.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
adapters/: allowlist.json
adapters/official/air/: manifest.json
adapters/official/fixed_site/: manifest.json
adapters/official/ground/: manifest.json
adapters/official/handheld/: manifest.json
adapters/official/maritime/: manifest.json
adapters/official/space/: manifest.json
adapters/official/subsea/: manifest.json
adapters/sdk/: CMakeLists.txt  README.md
adapters/sdk/include/: adapter_sdk.h
adapters/sdk/src/: adapter_sdk.cpp
cmake/: check_module_dependencies.cmake
configs/: sim_debug_admin.cfg  sim_default.cfg
docs/: adapter_architecture.md  adapter_contract.md  architecture.md  config_schema.md  data_sources.md  edge_case_catalog.md  front_view_display_architecture.md  git_process.md  harness_commands.example.txt  hazard_log.md  module_contracts.md  multi_modal_switching_design.md  multi_modal_switching_implementation_plan.md  navigation_fallbacks.md  operational_concepts.md  plan.md  platform_profile_inheritance.md  requirements.md  security_threat_model.md  sources_menu_registry.json  sources_menu_registry.md  sources_menu_registry.schema.json  test_harness.md  traceability.md  ui_standards.md  verification_plan.md  waivers.md
docs/adapters/: README.md  air.md  fixed_site.md  ground.md  handheld.md  maritime.md  space.md  subsea.md  ui_data_points.md
docs/agents_research/: README.md  backlog.md  co_simulation_federation_architecture_2026-02-18.md
examples/: README.md  cli_demo.cpp  io_packager.cpp  sim_demo.cpp
include/: DeadReckoning.h  GPSAlgorithm.h  HeatSignature.h  HeatSignatureAlgorithm.h  Kalmanfilter.h  Object.h  PathCalculator.h  PredictionAlgorithm.h  Tracker.h  main.h  menu.h  scenario.h  simulation.h
include/core/: DeadReckoning.h  GPSAlgorithm.h  HeatSignature.h  KalmanFilter.h  Object.h  PathCalculator.h  PredictionAlgorithm.h  Tracker.h  adapter_registry.h  external_io_envelope.h  hash.h  logging.h  mode_manager.h  mode_scheduler.h  motion_models.h  multi_modal_types.h  plugin_auth.h  provenance.h  sensors.h  sim_config.h  simulation_utils.h  state.h
include/tools/: adapter_registry_loader.h  audit_log.h  federation_bridge.h  io_packager.h  sim_config_loader.h
include/ui/: adapter_ui_mapping.h  alerts.h  audit_log.h  front_view.h  inputValidation.h  input_harness.h  main.h  menu.h  menu_selection.h  scenario.h  simulation.h  tui.h
scripts/: build.ps1  build.sh  run.ps1  run.sh  sync_sources_menu_registry.mjs  test.ps1  test.sh
src/: DeadReckoning.cpp  GPSAlgorithm.cpp  HeatSignature.cpp  KalmanFilter.cpp  Object.cpp  PathCalculator.cpp  PredictionAlgorithm.cpp  Tracker.cpp  main.cpp  menu.cpp  scenario.cpp  simulation.cpp
src/core/: DeadReckoning.cpp  GPSAlgorithm.cpp  HeatSignature.cpp  KalmanFilter.cpp  Object.cpp  PathCalculator.cpp  PredictionAlgorithm.cpp  Tracker.cpp  adapter_registry.cpp  hash.cpp  logging.cpp  mode_manager.cpp  mode_scheduler.cpp  motion_models.cpp  plugin_auth.cpp  sensors.cpp  sim_config.cpp  simulation_utils.cpp  state.cpp
src/tools/: adapter_registry_loader.cpp  audit_log.cpp  federation_bridge.cpp  io_packager.cpp  sim_config_loader.cpp
src/ui/: adapter_ui_mapping.cpp  alerts.cpp  audit_log.cpp  front_view.cpp  inputValidation.cpp  input_harness.cpp  main.cpp  menu.cpp  menu_selection.cpp  scenario.cpp  simulation.cpp  tui.cpp
tests/: core_sanity.cpp  edge_case_integration.cpp  federation_bridge.cpp  front_view_display.cpp  integration_flows.cpp  ui_alerts.cpp  ui_harness_runner.cpp  ui_harness_tests.cpp  ui_menu_selection.cpp  ui_status.cpp  ui_ui_tests_main.cpp
